app/styles/app.scss
/* ... */
.hero-image {
  // profile image
  background-image: url('../assets/image/profile.jpeg');
  background-size: cover;
  background-position: center;
  width: 300px;
  height: 300px;
  margin-top: 10rem;
  object-fit: cover;
  border-radius: 50%;

  @include tablet {
    width: 250px;
    height: 450px;
    margin-top: 6rem;
  }

  @include mobile {
    width: 90%;
    height: 400px;
    margin-top: 4rem;
    border-radius: 0.5rem;
    background-position: 0 25%;
  }
}

.about-me {
  // about me container
  display: flex;
  flex-direction: column;
  justify-content: center;
  width: 450px;
  height: 300px;
  margin-top: 10rem;
  text-align: justify;
  font-family: 'Inter', sans-serif;
  font-size: 1.2rem;

  &.light {
    color: $lightTextColor;
  }

  &.dark {
    color: $darkNeutralColor;
  }

  h1 {
    margin-bottom: 0.5rem;
    font-size: 2rem;
  }

  h3 {
    margin-bottom: 0.5rem;
    font-size: 1.5rem;
  }

  p {
    font-size: 1.2rem;
    text-align: justify;
    margin-bottom: 1rem;
  }

  @include tablet {
    width: 90%;
    height: auto;
    margin-top: 2rem;
    padding: 1rem;
  }

  @include mobile {
    width: 95%;
    height: auto;
    margin-top: 1rem;
    padding: 0.5rem;

    h1 {
      font-size: 1.5rem;
    }

    h3 {
      font-size: 1.2rem;
    }

    p {
      font-size: 1rem;
    }
  }
}


// footer styles and icons styles //

footer {
  display: flex;
  justify-content: space-between;
  align-items: center;
  height: 3rem;
  width: 100%;
  padding: 0 1rem;

  p {
    font-family: 'Inter', sans-serif;
    font-size: 0.8rem;
  }

  .icons {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 1.4rem;

    a:first-child {
      border-right: 1px solid $lightTextColor;
      padding-right: 1rem;
    }

    a:nth-child(2) {
      border-right: 1px solid $lightTextColor;
      padding-right: 1rem;
    }

    a:nth-child(3) {
      border-right: 1px solid $lightTextColor;
      padding-right: 1rem;
    }
  }

  &.light {
    @include themeStyles($lightBackgroundColor, $lightTextColor);
    border-top: 1px solid $lightTextColor;
  }

  &.dark {
    @include themeStyles($darkQuaternaryColor, $darkNeutralColor);
    border-top: 1px solid #666;

    /*A cor dos itens esta dentro do componente*/
    .icons {

      a:first-child,
      a:nth-child(2),
      a:nth-child(3) {
        border-right: 1px solid $darkNeutralColor;
      }
    }
  }

  @include mobile {
    flex-direction: column;
    height: auto;
    padding: 1rem;
    gap: 0.5rem;

    .icons {
      gap: 1rem;

      a:first-child,
      a:nth-child(2),
      a:nth-child(3) {
        padding-right: 1rem;
      }
    }
  }
}

// /projects styles //
.projects-container {
  margin: 1rem auto 0;
  padding: 4rem 2rem;
  min-height: 95vh;

  &.light {
    @include themeStyles($lightBackgroundColor, $lightTextColor);
  }

  &.dark {
    @include themeStyles($darkQuaternaryColor, $darkNeutralColor);
  }

  h1 {
    text-align: center;
    margin-bottom: 1rem;
    font-family: $montserratFont;
    font-size: 3rem;
  }

  .bento-grid {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
    gap: 1.5rem;
    padding: 1rem;

    @include mobile {
      grid-template-columns: repeat(auto-fit, minmax(360px, 1fr));
      padding: 0.5rem;
    }

    .project-card {
      height: auto;
      min-height: 385px;
      overflow: hidden;
      display: flex;
      flex-direction: column;
      background: rgba(255, 255, 255, 0.1);
      backdrop-filter: blur(10px);
      border-radius: 0.9rem;
      padding: 1rem;
      transition: transform 0.3s ease;
      font-family: $montserratFont;

      &:hover {
        transform: translateY(-5px);
      }

      &.light {
        color: $lightTextColor;
        background: rgba($lightBackgroundColor, 0.8);
        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);

        .project-title {
          color: $lightTextColor;

          a {
            color: inherit;

            &:hover {
              filter: brightness(0.9);
            }
          }
        }

        .project-type {
          color: $lightSecondaryColor;
        }

        .project-description {
          color: $lightTextColor;
        }

        .tech-stack {
          color: $lightTertiaryColor;

          svg:hover {
            color: $lightAccentColor;
          }
        }
      }

      &.dark {
        color: $darkNeutralColor;
        background: $backgroundcard;
        font-family: $montserratFont;

        .project-title {
          color: $darkNeutralColor;

          a {
            color: inherit;

            &:hover {
              color: #0066ff;
            }
          }
        }

        .project-type {
          color: #666;
        }

        .project-description {
          color: $darkNeutralColor;
        }

        .tech-stack {
          color: #0066ff;

          svg:hover {
            color: $darkTertiaryColor;
          }
        }
      }

      img {
        display: block;
        width: 100%;
        height: 150px;
        object-fit: cover;
        border-radius: 0.5rem;
        margin: 0 auto 0.5rem;
      }

      .project-title {

        font-weight: 600;
        margin-bottom: 0.5rem;
      }

      .project-type {
        font-weight: 500;
        margin-bottom: 0.5rem;
        font-family: 'Inter', sans-serif;
        font-size: 0.9rem;
      }

      .project-description {
        font-size: 0.9rem;
        line-height: 1.5;
        margin-bottom: 1rem;
        flex-grow: 1;
      }

      .tech-stack {
        margin-top: auto;
        display: flex;
        gap: 1rem;
        font-size: 1.5rem;

        svg {
          transition: all 0.3s ease;

          &:hover {
            transform: scale(1.2);
          }
        }
      }
    }
  }
}
/* ... */

